@@ -60,6 +60,8 @@ program simple_glide
   type(simple_climate) :: climate         ! climate
   type(ConfigSection), pointer :: config  ! configuration stuff
   real(kind=rk) time
+  real(kind=dp) t1,t2
+  integer clock,clock_rate
 
   call glimmer_GetCommandline()
   
@@ -68,6 +70,10 @@ program simple_glide
   
   ! read configuration
   call ConfigRead(commandline_configname,config)
+
+  ! start timing
+  call system_clock(clock,clock_rate)
+  t1 = real(clock,kind=dp)/real(clock_rate,kind=dp)
 
   ! initialise GLIDE
   call glide_config(model,config)
@@ -94,7 +100,9 @@ program simple_glide
 
   ! finalise GLIDE
   call glide_finalise(model)
-  call glimmer_writestats(commandline_resultsname,commandline_configname)
+  call system_clock(clock,clock_rate)
+  t2 = real(clock,kind=dp)/real(clock_rate,kind=dp)
+  call glimmer_writestats(commandline_resultsname,commandline_configname,t2-t1)
   call close_log
 
 end program simple_glide
